# HW_24_DRF

./: .env.sample  .gitignore  README.MD  docker-compose.yaml  payments.json  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  paginators.py  permissions.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_remove_subscription_is_active.py  0005_course_price_lesson_price.py  0006_remove_course_price_remove_lesson_price.py
materials/serializers/: course.py  lesson.py  subscription.py
materials/views/: course.py  lesson.py  subscription.py
payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_courseprice_options_alter_lessonprice_options.py  0003_alter_courseprice_options_alter_lessonprice_options.py  0004_courseprice_stripe_price_id_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  fill.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_role.py  0004_alter_payment_user.py  0005_delete_payment.py
